# neural-memory

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: neural-config.md  neural-index.md  neural-inspect.md  neural-query.md  neural-status.md  neural-update.md
.github/: release.yml
.github/workflows/: release.yml  test.yml
agents/: neural-doc-writer.md  neural-explorer.md  neural-insight-collector.md
hooks/: hooks.json
hooks/scripts/: context.sh  session.sh
neural_memory/: __init__.py  __main__.py  agent.py  cli.py  config.py  context.py  context_parser.py  dashboard.py  embeddings.py  graph.py  hooks.py  indexer.py  languages.py  lsp_client.py  models.py  overview.py  parser.py  redactor.py  serve.py  server.py  storage.py  summarizer.py  ts_parser.py  visualize.py
neural_memory/db/: __init__.py  connector.py  orm_detector.py  query_tracer.py  schema_indexer.py
neural_memory/docs/: __init__.py  base.py  crates.py  gopkg.py  npm.py  pypi.py  registry.py
neural_memory/parsers/: __init__.py  base.py  python_parser.py  registry.py  treesitter_parser.py
neural_memory/parsers/languages/: go.py  rust.py  sql.py  typescript.py
neural_memory/queries/: go.scm  javascript.scm  php.scm  python.scm  ruby.scm  rust.scm  sql.scm  typescript.scm
scripts/: bump_version.py
skills/neural-add-bug/: SKILL.md
skills/neural-add-task/: SKILL.md
skills/neural-config/: SKILL.md
skills/neural-context/: SKILL.md
skills/neural-index/: SKILL.md
skills/neural-insight/: SKILL.md
skills/neural-inspect/: SKILL.md
skills/neural-query/: SKILL.md
skills/neural-status/: SKILL.md
skills/neural-stop/: SKILL.md
skills/neural-tasks/: SKILL.md
skills/neural-update/: SKILL.md
skills/neural-visualize/: SKILL.md
tests/: conftest.py  test_agent.py  test_config.py  test_context.py  test_context_parser.py  test_dashboard.py  test_e2e.py  test_embeddings.py  test_graph.py  test_hooks.py  test_indexer.py  test_languages.py  test_lsp_client.py  test_models.py  test_overview.py  test_parser.py  test_plugin_manifest.py  test_redactor.py  test_serve.py  test_server.py  test_storage.py  test_summarizer.py  test_visualize.py
tests/test_db/: test_connector.py  test_orm_detector.py  test_query_tracer.py  test_sql_parser.py
tests/test_docs/: test_npm.py  test_pypi.py  test_registry.py
tests/test_parsers/: test_go.py  test_registry.py  test_rust.py  test_typescript.py
