[project]
name = "neural-memory-mcp"
version = "0.2.1"
description = "A neural knowledge graph for codebases — three-layer code/bugs/tasks understanding for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Yakoub-ai" },
]
keywords = [
    "claude-code",
    "mcp",
    "knowledge-graph",
    "codebase",
    "plugin",
    "code-analysis",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
vectors = [
    "numpy>=1.24.0",
]
viz = [
    "numpy>=1.24.0",
    "plotly>=5.15.0",
]
all = [
    "neural-memory-mcp[vectors,viz]",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/Yakoub-ai/neural-memory"
Repository = "https://github.com/Yakoub-ai/neural-memory"
Issues = "https://github.com/Yakoub-ai/neural-memory/issues"

[project.scripts]
neural-memory = "neural_memory.server:mcp.run"
neural-memory-setup = "neural_memory.cli:main"
neural-memory-viz = "neural_memory.serve:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neural_memory*"]

[tool.setuptools.package-data]
neural_memory = ["py.typed"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
