[project]
name = "neural-memory-mcp"
version = "0.8.0"
description = "A neural knowledge graph for codebases — three-layer code/bugs/tasks understanding for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Yakoub-ai" },
]
keywords = [
    "claude-code",
    "mcp",
    "knowledge-graph",
    "codebase",
    "plugin",
    "code-analysis",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-php>=0.23.0",
]

[project.optional-dependencies]
vectors = [
    "numpy>=1.24.0",
]
viz = [
    "numpy>=1.24.0",
    "plotly>=5.15.0",
]
db = [
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
]
sql = [
    "tree-sitter-sql>=0.3.0",
]
all = [
    "neural-memory-mcp[vectors,viz,db,sql]",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/Yakoub-ai/neural-memory"
Repository = "https://github.com/Yakoub-ai/neural-memory"
Issues = "https://github.com/Yakoub-ai/neural-memory/issues"

[project.scripts]
neural-memory = "neural_memory.server:mcp.run"
neural-memory-setup = "neural_memory.cli:main"
neural-memory-viz = "neural_memory.serve:main"
neural-context-hook = "neural_memory.hooks:prompt_context"
neural-session-hook = "neural_memory.hooks:session_end"

[tool.setuptools.packages.find]
where = ["."]
include = ["neural_memory*"]

[tool.setuptools.package-data]
neural_memory = ["py.typed", "queries/*.scm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
